Реализована лента активности